# aws-via-haskell

./: aws-via-haskell.cabal  stack.yaml
rds/: Main.hs
