name:                                       aws-via-haskell
version:                                    0.1.0.0
homepage:                                   https://github.com/rcook/aws-via-haskell#readme
license:                                    MIT
license-file:                               LICENSE
author:                                     Richard Cook
maintainer:                                 rcook@rcook.org
copyright:                                  2017 Richard Cook
category:                                   Command Line
build-type:                                 Simple
cabal-version:                              >= 1.10
extra-source-files:                         README.md

source-repository head
  type:                                     git
  location:                                 https://github.com/rcook/aws-via-haskell.git

library
  default-language:                         Haskell2010
  hs-source-dirs:                           lib
  ghc-options:                              -W -Wall -fwarn-incomplete-patterns -fwarn-unused-imports
  build-depends:                            aws-easy
                                          , base >= 4.7 && < 5
                                          , unliftio-core                  >= 0.1    && < 0.2
  exposed-modules:                          AWSViaHaskell


executable lambda-app
  default-language:                         Haskell2010
  hs-source-dirs:                           lambda
  main-is:                                  Main.hs
  ghc-options:                              -threaded -rtsopts -with-rtsopts=-N -W -Wall -fwarn-incomplete-patterns -fwarn-unused-imports
  build-depends:                            aeson
                                          , amazonka-iam
                                          , amazonka-lambda
                                          , amazonka-sts
                                          , aws-via-haskell
                                          , base >= 4.7 && < 5
                                          , unliftio-core                  >= 0.1    && < 0.2
                                          , bytestring
                                          , directory
                                          , filepath
                                          , lens
                                          , text
                                          , text-format
                                          , time
                                          , unordered-containers
                                          , zip-archive
  other-modules:                            LambdaImports


executable ssm-app
  default-language:                         Haskell2010
  hs-source-dirs:                           ssm
  main-is:                                  Main.hs
  ghc-options:                              -threaded -rtsopts -with-rtsopts=-N -W -Wall -fwarn-incomplete-patterns -fwarn-unused-imports
  build-depends:                            amazonka-ssm
                                          , aws-via-haskell
                                          , base >= 4.7 && < 5
                                          , unliftio-core                  >= 0.1    && < 0.2
                                          , lens
                                          , directory
                                          , filepath
                                          , text
  other-modules:                            SSMImports
